[gd_scene format=3 uid="uid://bpfivjsbt6mq7"]

[ext_resource type="Script" uid="uid://3y8frnttyrlt" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://kflk2to8yd8" path="res://Assets/sky.png" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://dxd3yyn7or1a4" path="res://Assets/adum.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://chllreyymafqr" path="res://Assets/cloud.png" id="3_sweqy"]
[ext_resource type="Theme" uid="uid://biakj4sw07nf" path="res://theme.tres" id="4_sweqy"]
[ext_resource type="Texture2D" uid="uid://bnriwwyrbamdr" path="res://Assets/wheel.png" id="6_1jxqw"]
[ext_resource type="Texture2D" uid="uid://drh3ncqiimpd1" path="res://Assets/HardHat.png" id="6_2hs0m"]

[sub_resource type="LabelSettings" id="LabelSettings_onrkg"]
font_size = 38
font_color = Color(0.32544088, 0.3254409, 0.32544088, 1)
outline_size = 8
outline_color = Color(0.8409475, 0.4097948, 0.13383946, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hs0m"]
bg_color = Color(0.8343715, 0.4970916, 0.41088095, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.37181717, 3.7902967e-07, 4.813075e-08, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 60
corner_radius_bottom_left = 20

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_onrkg"]
friction = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(148, 140)

[sub_resource type="CircleShape2D" id="CircleShape2D_dw050"]
radius = 61.008198

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(150, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_2hs0m"]

[node name="Player" type="Node2D" unique_id=1001854450]
script = ExtResource("1_onrkg")

[node name="CloudParallax" type="Parallax2D" parent="." unique_id=906885427]
unique_name_in_owner = true
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(7680, 0)
autoscroll = Vector2(-10, 0)

[node name="Cloud" type="Control" parent="CloudParallax" unique_id=271493044]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cloud" type="TextureRect" parent="CloudParallax/Cloud" unique_id=1092856670]
layout_mode = 0
offset_left = -1510.0
offset_top = -681.0
offset_right = 6170.0
offset_bottom = 399.0
texture = ExtResource("3_sweqy")

[node name="Cam" type="Camera2D" parent="." unique_id=531662432]
zoom = Vector2(0.65, 0.65)

[node name="UI" type="Control" parent="Cam" unique_id=578552594]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -1478.0
offset_top = -830.0
offset_right = 1478.0
offset_bottom = 833.0

[node name="Sky" type="TextureRect" parent="Cam/UI" unique_id=589232948]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0800006)
texture = ExtResource("2_hqtel")

[node name="VBoxContainer" type="VBoxContainer" parent="Cam/UI" unique_id=646121074]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -259.5
offset_right = 259.5
offset_bottom = 110.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Cam/UI/VBoxContainer" unique_id=1257270816]
layout_mode = 2

[node name="LevelName" type="Label" parent="Cam/UI/VBoxContainer" unique_id=1006005452]
unique_name_in_owner = true
layout_mode = 2
text = "Level lmao something broke"
label_settings = SubResource("LabelSettings_onrkg")
horizontal_alignment = 1

[node name="DeathsLabel" type="Label" parent="Cam/UI/VBoxContainer" unique_id=1631722335]
unique_name_in_owner = true
layout_mode = 2
text = "Deaths:"
label_settings = SubResource("LabelSettings_onrkg")
horizontal_alignment = 1

[node name="Restart" type="Button" parent="Cam/UI" unique_id=631448054]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -301.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 116.0
grow_horizontal = 0
theme = ExtResource("4_sweqy")
text = "Restart"

[node name="Menu" type="Button" parent="Cam/UI" unique_id=1909263977]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 301.0
offset_bottom = 116.0
theme = ExtResource("4_sweqy")
theme_override_styles/normal = SubResource("StyleBoxFlat_2hs0m")
text = "Menu"

[node name="DeadColour" type="ColorRect" parent="Cam/UI" unique_id=2120833506]
modulate = Color(1, 1, 1, 0)
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.87734634, 3.8745256e-06, 1.2513996e-06, 1)

[node name="Body" type="RigidBody2D" parent="." unique_id=1501689367]
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_onrkg")
can_sleep = false
continuous_cd = 2

[node name="Normal" type="Node2D" parent="Body" unique_id=157678096]

[node name="Pic" type="Sprite2D" parent="Body/Normal" unique_id=394957607]
texture = ExtResource("2_i3pqv")

[node name="Shape" type="CollisionShape2D" parent="Body/Normal" unique_id=1720817179]
shape = SubResource("RectangleShape2D_hqtel")

[node name="Wheel" type="Node2D" parent="Body" unique_id=698778892]
visible = false

[node name="Pic" type="Sprite2D" parent="Body/Wheel" unique_id=185685140]
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_1jxqw")

[node name="Shape" type="CollisionShape2D" parent="Body/Wheel" unique_id=1486597946]
shape = SubResource("CircleShape2D_dw050")

[node name="Hat" type="Sprite2D" parent="Body" unique_id=653499310]
visible = false
position = Vector2(13, -68)
texture = ExtResource("6_2hs0m")

[node name="HeadHurt" type="Area2D" parent="Body" unique_id=267441761]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HeadHurt" unique_id=444295374]
position = Vector2(0, -62.5)
shape = SubResource("RectangleShape2D_onrkg")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Body" unique_id=1911634008]
remote_path = NodePath("../../Cam")
update_rotation = false
update_scale = false

[node name="StopWhining" type="CollisionShape2D" parent="Body" unique_id=721687375]
shape = SubResource("CircleShape2D_2hs0m")

[connection signal="pressed" from="Cam/UI/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Cam/UI/Menu" to="." method="_on_menu_pressed"]
[connection signal="body_entered" from="Body/HeadHurt" to="." method="_on_head_hurt_body_entered"]
